--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -21,5 +21,6 @@
     "editor.formatOnSave": true,
     "editor.formatOnType": true,
     "cSpell.language": "en-GB",
-    "markdown.extension.italic.indicator": "_"
+    "markdown.extension.italic.indicator": "_",
+    "editor.fontFamily": "'Fira Mono','Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback'"
 }
