Add Signal and Zotero

--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -72,5 +72,7 @@ cask "proton-drive"
 cask "proton-mail"
 cask "proton-pass"
 cask "protonvpn"
+cask "signal"
 cask "vivaldi"
 cask "vscodium"
+cask "zotero"
