Add Lexend font

--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -35,6 +35,7 @@ cask "font-league-gothic"
 cask "font-league-mono"
 cask "font-league-script"
 cask "font-league-spartan"
+cask "font-lexend"
 cask "font-linden-hill"
 cask "font-manrope"
 cask "font-monoid"
