Add Hugo to list of installables

--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -2,6 +2,7 @@ tap "homebrew/bundle"
 brew "ca-certificates"
 brew "openssl@3"
 brew "cask"
+brew "hugo"
 brew "python@3.13"
 cask "brave-browser"
 cask "ente"
