Set up for JS development

--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -3,6 +3,8 @@ brew "ca-certificates"
 brew "openssl@3"
 brew "cask"
 brew "hugo"
+brew "node"
+brew "vite"
 brew "python@3.13"
 cask "brave-browser"
 cask "ente"
