--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -4,8 +4,9 @@ brew "openssl@3"
 brew "cask"
 brew "hugo"
 brew "node"
-brew "vite"
+brew "nvm"
 brew "python@3.13"
+brew "vite"
 cask "brave-browser"
 cask "ente"
 cask "ente-auth"
