Update Brew list to untick unused casks

--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -70,15 +70,15 @@ cask "font-space-mono"
 cask "font-urbanist"
 cask "freetube"
 cask "gimp"
-cask "gitbutler"
+# cask "gitbutler"
 cask "google-chrome"
 cask "iina"
 cask "inkscape"
-cask "jami"
-cask "karabiner-elements"
+# cask "jami"
+# cask "karabiner-elements"
 cask "microsoft-edge"
 cask "min"
-cask "monitorcontrol"
+# cask "monitorcontrol"
 cask "mos"
 cask "mountain-duck"
 cask "mullvad-browser"
@@ -92,8 +92,8 @@ cask "proton-pass"
 cask "protonvpn"
 cask "signal"
 cask "tor-browser"
-cask "unnaturalscrollwheels"
-cask "visual-studio-code"
+# cask "unnaturalscrollwheels"
+# cask "visual-studio-code"
 cask "vivaldi"
 cask "vscodium"
 cask "zotero"
