Also install Visual Studio Code

--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -94,7 +94,7 @@ cask "protonvpn"
 cask "signal"
 cask "tor-browser"
 # cask "unnaturalscrollwheels"
-# cask "visual-studio-code"
+cask "visual-studio-code"
 cask "vivaldi"
 cask "vscodium"
 cask "zotero"
