--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -8,7 +8,7 @@ brew "node"
 brew "nvm"
 brew "openssl@3"
 brew "python@3.13"
-brew "tofu"
+brew "opentofu"
 brew "vite"
 cask "audacity"
 cask "bitwarden"
