Install Docker GUI

--- a/macOS/Brewfile
+++ b/macOS/Brewfile
@@ -3,7 +3,6 @@ brew "awscli"
 brew "ca-certificates"
 brew "cask"
 brew "direnv"
-brew "docker"
 brew "ffmpeg"
 brew "go"
 brew "hugo"
@@ -19,6 +18,7 @@ cask "brave-browser"
 cask "calibre"
 cask "cryptomator"
 cask "cyberduck"
+cask "docker"
 cask "ente-auth"
 cask "ente"
 cask "finicky"
